# simi-qt

./: .gitignore  CMakeLists.txt  README  hello.cxx  simi-qt-cache-build.cmake
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  boundarymanager.cpp  boundarymanager.h  compiletimeconstants.h.in  contrastdialog.cpp  contrastdialog.h  contrastdialog.ui  customInteractorStyle.cpp  customInteractorStyle.h  doxgen_main.dox  drawmanager.cpp  drawmanager.h  hello.cpp  imagepairmanager.cpp  imagepairmanager.h  layoutmanager.cpp  layoutmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  multiviewmanager.cpp  multiviewmanager.h  rendermanager.cpp  rendermanager.h  seedpointmanager.cpp  seedpointmanager.h  segmentation.cpp  segmentation.h  segmenter.cpp  segmenter.h  viewmanager.cpp  viewmanager.h  volumerendermanager.cpp  volumerendermanager.h
src/cmake/: prependlist.cmake
src/icons/: README
src/tests/: CMakeLists.txt  drawmanager_tester.cmake  drawmanager_tester.cpp  drawmanager_tester.h  imagepairmanager_tester.cmake  imagepairmanager_tester.cpp  imagepairmanager_tester.h  seedpointmanager_tester.cmake  seedpointmanager_tester.cpp  seedpointmanager_tester.h  segmenter_tester.cmake  segmenter_tester.cpp  segmenter_tester.h  ui_tester.cmake  ui_tester.cpp  ui_tester.h
src/tests/cmake/: lcov.cmake
