#This is the CMakeLists.txt file for the simi-qt project 

FIND_PACKAGE(ITK)

IF(ITK_FOUND)
	INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
	MESSAGE(FATAL_ERROR
	"ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)

FIND_PACKAGE(VTK)
IF(VTK_FOUND)
	INCLUDE(${VTK_USE_FILE})
ELSE(VTK_FOUND)
	MESSAGE(FATAL_ERROR
	"VTK not found. Please set VTK_DIR.")
ENDIF(VTK_FOUND)


FIND_PACKAGE(Qt4 REQUIRED QtCore QtGui)
INCLUDE(${QT_USE_FILE})

ADD_EXECUTABLE(HelloWorld hello.cxx )
TARGET_LINK_LIBRARIES(HelloWorld ITKCommon ${QT_LIBRARIES} ${VTK_LIBRARIES})
